--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "tutorial-site",
   "dependencies": {
-    "ember": "1.12.0",
+    "ember": "canary",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "ember-data": "1.0.0-beta.18",
@@ -11,6 +11,7 @@
     "ember-resolver": "~0.1.15",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1"
+    "qunit": "~1.17.1",
+    "materialize": "~0.96.1"
   }
 }
